[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SceneOneRoom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/BeeshoyNPC.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://Scenes/SceneTwoRoom.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/SecondBeeshoyNPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/MysteryRoom.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/ThirdNpc.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/RevealRoom.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/FinalMap.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/FourthBeeshoyNpc.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Butler.tscn" type="PackedScene" id=13]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Map" type="Node" parent="."]

[node name="Map" parent="Map" instance=ExtResource( 1 )]

[node name="SceneOneRoom" parent="Map" instance=ExtResource( 3 )]
position = Vector2( 1100, 0 )

[node name="SceneTwoRoomAndInterrogationSetup" parent="Map" instance=ExtResource( 6 )]
position = Vector2( 1699.57, 0 )

[node name="MysteryRoom" parent="Map" instance=ExtResource( 8 )]
position = Vector2( 2700, 0 )

[node name="RevealRoom" parent="Map" instance=ExtResource( 10 )]
position = Vector2( 3500, 0 )

[node name="FinalMap" parent="Map" instance=ExtResource( 11 )]
position = Vector2( 4250, 0 )

[node name="Player" type="Node" parent="."]

[node name="Player" parent="Player" instance=ExtResource( 2 )]
position = Vector2( 300, 576.991 )

[node name="Beeshoy" type="Node" parent="."]

[node name="BeeshoyNPC" parent="Beeshoy" instance=ExtResource( 4 )]
position = Vector2( 1170.46, 573.811 )

[node name="SecondBeeshoyNPC" parent="Beeshoy" instance=ExtResource( 7 )]
position = Vector2( 1730, 573 )

[node name="ThirdNpc" parent="Beeshoy" instance=ExtResource( 9 )]
position = Vector2( 2717.5, 572 )

[node name="FourthBeeshoyNpc" parent="Beeshoy" instance=ExtResource( 12 )]
position = Vector2( 3720, 573 )

[node name="Butler" type="Node" parent="."]

[node name="Butler" parent="Butler" instance=ExtResource( 13 )]
position = Vector2( 4399.74, 573 )
